--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -156,7 +156,7 @@
     <string name="malware_whitelist_help">கருப்பொருள் கண்டறிதலைத் தடுக்க பயனர் வரையறுக்கப்பட்ட அனுமதிப்பட்டியலாளர். தீங்கிழைக்கும் இணைப்புகளைக் கருப்பொருள் எனக் குறைக்கும் விதிகளை உருவாக்க நீண்ட அழுத்தமாக இருக்கும்</string>
     <string name="hidden_connections_help">இணைப்பு-பட்டியல் உள்ளீடுகளை மறைக்க விதிகளின் பட்டியல், எனவே நீங்கள் தொடர்புடையவற்றில் கவனம் செலுத்தலாம்</string>
     <string name="malicious_connection_filter">தீங்கிழைக்கும்</string>
-    <string name="status_filter">நிலை: %1$s</string>
+    <string name="status_filter">HTTP நிலை: %1$s</string>
     <string name="not_hidden_filter">மறைக்கப்படவில்லை</string>
     <string name="copy_action">நகலெடு…</string>
     <string name="url_val">URL: %1$s</string>
@@ -276,7 +276,7 @@
     <string name="not_decryptable">மறைகுறியாக்க முடியாதது</string>
     <string name="decrypted">மறைகுறியாக்கப்பட்டது</string>
     <string name="decryption">மறைகுறியாக்கம்</string>
-    <string name="decryption_filter">மறைகுறியாக்கம்: %1$s</string>
+    <string name="decryption_filter">நிலை: %1$s</string>
     <string name="connection_start_not_seen">இந்த இணைப்பின் தொடக்கத்தை pcapdroid பார்த்ததில்லை. சில தகவல்கள் காணவில்லை</string>
     <string name="network_traffic">போக்குவரத்து</string>
     <string name="warn_no_app_data">பயன்பாட்டு தரவு எதுவும் பரிமாறப்படவில்லை</string>
@@ -375,7 +375,7 @@
     <string name="warning">எச்சரிக்கை</string>
     <string name="paid_features_unlocked">கட்டண நற்பொருத்தங்கள் திறக்கப்பட்டன. ஓடியால் பிடிப்பை மறுதொடக்கம் செய்யுங்கள்</string>
     <string name="build_info">தகவலை உருவாக்குங்கள்</string>
-    <string name="tls_decryption_with_root_msg">ரூட் மூலம் டி.எல்.எச்மறைகுறியாக்கத்தை இயக்கும் திறன் ஒரு சோதனை அம்சமாகும். இது அறியப்பட்ட பிழைகளின் பட்டியல்:\n\n - pcapdroid இல், அசல் பயன்பாட்டிற்கு பதிலாக MITM- அடான் பயன்பாட்டிலிருந்து உருவாக்கப்பட்ட போக்குவரத்தை நீங்கள் காண்பீர்கள்\n - பயன்பாட்டு வடிகட்டி அமைக்கப்படும்போது, இலக்கு பயன்பாட்டிற்கு மட்டுமே மறைகுறியாக்கம் ஏற்படும், ஆனால் பி.சி.ஏ.பி டிராய்டு இன்னும் மற்ற பயன்பாடுகளின் போக்குவரத்தைக் காண்பிக்கும்\n - பிடிப்பு தொடங்கத் தவறினால், நீங்கள் உண்மையில் iptables கட்டளையை ரூட்டாக இயக்க முடியும் என்பதை உறுதிப்படுத்தவும்\n - இது ஆண்ட்ராய்டு 12 மற்றும் அதற்குப் பிறகு வேலை செய்யாது\n - ஒரு VPN செயலி இயங்கினால், நீங்கள் ஒரு குறிப்பிட்ட செயலியை மறைகுறியாக்கத்திற்காக இலக்காகக் கொள்ள வேண்டும் அல்லது PCAPdroid mitm addon ஐ VPN இலிருந்து விலக்க வேண்டும், இல்லையெனில் போக்குவரத்து ஒரு சுழற்சியில் செல்லும்</string>
+    <string name="tls_decryption_with_root_msg">ரூட் மூலம் டி.எல்.எச்மறைகுறியாக்கத்தை இயக்கும் திறன் ஒரு சோதனை அம்சமாகும். இது அறியப்பட்ட பிழைகளின் பட்டியல்:\n\n - pcapdroid இல், அசல் பயன்பாட்டிற்கு பதிலாக MITM- அடான் பயன்பாட்டிலிருந்து உருவாக்கப்பட்ட போக்குவரத்தை நீங்கள் காண்பீர்கள்\n - SSL கீலாக் டம்ப் ஆதரிக்கப்படவில்லை\n - பயன்பாட்டு வடிகட்டி அமைக்கப்படும்போது, இலக்கு பயன்பாட்டிற்கு மட்டுமே மறைகுறியாக்கம் ஏற்படும், ஆனால் பி.சி.ஏ.பி டிராய்டு இன்னும் மற்ற பயன்பாடுகளின் போக்குவரத்தைக் காண்பிக்கும்\n - பிடிப்பு தொடங்கத் தவறினால், நீங்கள் உண்மையில் iptables கட்டளையை ரூட்டாக இயக்க முடியும் என்பதை உறுதிப்படுத்தவும்\n - இது ஆண்ட்ராய்டு 12 மற்றும் அதற்குப் பிறகு வேலை செய்யாது\n - ஒரு VPN செயலி இயங்கினால், நீங்கள் ஒரு குறிப்பிட்ட செயலியை மறைகுறியாக்கத்திற்காக இலக்காகக் கொள்ள வேண்டும் அல்லது PCAPdroid mitm addon ஐ VPN இலிருந்து விலக்க வேண்டும், இல்லையெனில் போக்குவரத்து ஒரு சுழற்சியில் செல்லும்</string>
     <string name="unlock_token_summary">பயன்பாட்டின் கூகிள் அல்லாத விளையாட்டு கட்டமைப்புகளில் கட்டண அம்சங்களைத் திறக்க பயன்படுத்தக்கூடிய ஒரு கிள்ளாக்கு (எ.கா. எஃப்-டிராய்டு/கிதுப்)</string>
     <string name="unlock_token_error">திறத்தல் கிள்ளாக்கை கோர முடியவில்லை [ %1$d]: %2$s</string>
     <string name="access_paid_features_msg">கட்டண அம்சங்களை எவ்வாறு அணுகுவது என்பதை அறிய <a href="%1$s">பயனர் கையேடு </a> ஐப் பாருங்கள்</string>
