--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -18,7 +18,7 @@
     <string name="target_sdk">Цільовий SDK</string>
     <string name="capture_prefs">Захопити</string>
     <string name="show_only_malicious">Зловмисні з\'єднання</string>
-    <string name="status_filter">Статус: %1$s</string>
+    <string name="status_filter">Статус HTTP: %1$s</string>
     <string name="asn">ASN</string>
     <string name="country_val">Країна: %1$s</string>
     <string name="malware_status_detected">Виявлено зловмисні з\'єднання</string>
@@ -98,7 +98,7 @@
     <string name="pcap_read_error">Помилка читання файла захоплення. Перевірте журнал для подробиць</string>
     <string name="pcapdroid_trailer_notice">Для показу актуальних додатків замість \"%1$s\", переконайтеся, що увімкнено опцію \"%2$s\" перед генеруванням дампу</string>
     <string name="active_vpn_detected">Виявлено активний VPN</string>
-    <string name="app_intro_firewall_msg">З вбудованим <a href="%1$s">Фаєрволом</a> можна легко блокувати доступ до інтернету для окремих додатків і доменів \n \nПоєднайте це з вбудованим відстеженням трафіку, щоб отримати найкращий інструмент для захисту вашої конфіденційності</string>
+    <string name="app_intro_firewall_msg">З вбудованим <a href="%1$s">Фаєрволом</a> можна легко блокувати доступ до інтернету для окремих додатків, доменів і країн \n \nПоєднайте це з вбудованим відстеженням трафіку, щоб отримати найкращий інструмент для захисту вашої конфіденційності</string>
     <string name="app_intro_malware_detection">Покращить безпеку вашого пристрою з функцією <a href="%1$s">виявлення зловмисного ПЗ</a>
 \n
 \nВикористовуючи актуальні чорні списки, він може виявляти, блокувати та попереджати про зловмисні з\'єднання в реальному часі</string>
@@ -133,10 +133,10 @@
     <string name="remote_collector_notice">Ви налаштували PCAPdroid для надсилання трафіку віддаленому серверу. Сервер зможе отримати доступ до вашої конфіденційної інформації.
 \n
 \nЯкщо хтось попросив вас це зробити, це, ймовірно, спроба шахрайства</string>
-    <string name="remote_server_warning">З міркувань безпеки, надсилання трафіку на віддалений сервер \"%1$s\" не дозволено\"</string>
+    <string name="remote_server_warning">З міркувань безпеки, надсилання трафіку на віддалений сервер \"%1$s\" не дозволено</string>
     <string name="warning">Застереження</string>
     <string name="paid_features_unlocked">Платні функції розблоковано. Перезапустіть захоплення, якщо виконується</string>
-    <string name="tls_decryption_with_root_msg">Можливість виконати дешифрування TLS з рут це експериментальна функція. Список відомих багів: \n \n - у PCAPdroid ви побачите трафік, згенерований додатком доповненням mitm замість оригінальним додатком \n - коли встановлено фільтр додатку, дешифрування відбуватиметься лише для цільового додатка, але PCAPdroid все одно показуватиме трафік інших додатків \n - якщо захоплення не вдається запустити, переконайтеся, що ви дійсно можете виконувати команду iptables як рут (наприклад, через termux) \n - може не працювати на Android 12 і вище \n - якщо додаток VPN виконується, ви повинні або вибрати конкретний додаток для дешифрування або виключити доповнення PCAPdroid mitm з VPN, інакше трафік буде зациклений</string>
+    <string name="tls_decryption_with_root_msg">Можливість виконати дешифрування TLS з рут це експериментальна функція. Список відомих багів: \n \n - у PCAPdroid ви побачите трафік, згенерований додатком доповненням mitm замість оригінальним додатком \n - Дамп журналу ключів SSL не підтримується \n - коли встановлено фільтр додатку, дешифрування відбуватиметься лише для цільового додатка, але PCAPdroid все одно показуватиме трафік інших додатків \n - якщо захоплення не вдається запустити, переконайтеся, що ви дійсно можете виконувати команду iptables як рут (наприклад, через termux) \n - може не працювати на Android 12 і вище \n - якщо додаток VPN виконується, ви повинні або вибрати конкретний додаток для дешифрування або виключити доповнення PCAPdroid mitm з VPN, інакше трафік буде зациклений</string>
     <string name="unlock_token_summary">Токен який може використовуватися для розблокування платних функцій в збірках додатку без Google Play (наприклад, F-Droid/Github)</string>
     <string name="unlock_token_error">Не вдався запит токена розблокування [%1$d]: %2$s</string>
     <string name="access_paid_features_msg">Ознайомтесь з <a href="%1$s">посібником користувача</a>, щоб дізнатися, як отримати доступ до платних функцій</string>
@@ -416,7 +416,7 @@
     <string name="full_payload">Повне корисне навантаження</string>
     <string name="full_payload_summary">Показати повне корисне навантаження з\'єднань (наприклад, повний HTTP запит і відповідь). Це вимагає багато пам\'яті, не використовуйте довго</string>
     <string name="not_decryptable">Не дешифрувати</string>
-    <string name="decryption_filter">Дешифрування: %1$s</string>
+    <string name="decryption_filter">Статус: %1$s</string>
     <string name="connection_start_not_seen">PCAPdroid не виявив початку цього з\'єднання. Деяка інформація може зникнути</string>
     <string name="network_traffic">Трафік</string>
     <string name="warn_no_app_data">Дані програми не обміняно</string>
